// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Colors all 1`] = `
<div
  className="container p-4"
>
  <h1
    className="text-xl"
  >
    Primary
  </h1>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(51, 51, 51)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(10, 10, 10)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(20, 20, 20)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(31, 31, 31)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(41, 41, 41)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(245, 245, 245)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(214, 214, 214)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(173, 173, 173)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(133, 133, 133)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(92, 92, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h1
    className="text-xl mt-8"
  >
    Utility
  </h1>
  <h2
    className="text-l mt-4"
  >
    Red
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(224, 85, 72)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(89, 34, 28)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(134, 51, 43)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(179, 68, 57)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(253, 246, 246)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(251, 238, 236)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(249, 221, 218)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(243, 187, 182)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(236, 153, 145)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(230, 119, 109)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h2
    className="text-l mt-4"
  >
    Highlight Green
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(91, 164, 73)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(68, 123, 55)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(248, 252, 247)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(240, 250, 238)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(227, 245, 222)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(199, 235, 190)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(170, 226, 157)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(142, 216, 125)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Typography Body 1`] = `
Array [
  <section
    className="container p-4 undefined"
  >
    <h1
      className="text-4xl"
    >
      PC
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
  <section
    className="container p-4 mt-12"
  >
    <h1
      className="text-4xl"
    >
      SP
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
]
`;

exports[`Storyshots Components|Badge all 1`] = `
<div
  className="sc-AxirZ fgpywr"
>
  10
</div>
`;

exports[`Storyshots Components|Button Box 1`] = `
<button
  className="sc-AxiKw brELHc"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Confirm
</button>
`;

exports[`Storyshots Components|Button Circle 1`] = `
<button
  className="sc-AxhUy fCMmlZ"
  onClick={[Function]}
  type="reset"
/>
`;

exports[`Storyshots Components|Button Text 1`] = `
<button
  className="sc-AxgMl kYTquo"
  onClick={[Function]}
  type="button"
>
  <span
    className="sc-AxheI ikxDYW"
    data-test="text-button-child"
  >
    Show filters
  </span>
</button>
`;

exports[`Storyshots Components|Checkbox all 1`] = `
<div
  className="sc-Axmtr jgrOWU"
  data-test="nocheck-box"
  onClick={[Function]}
  tabIndex={1}
>
  <div
    className="sc-AxhCb eBehuO sc-AxmLO fwmUQb"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-fzozJi ndvKQ"
  >
    Checkbox
  </span>
</div>
`;

exports[`Storyshots Components|Datepicker Null 1`] = `
<div
  className="sc-fzplWN OzktN"
  width="100%"
>
  <div
    className="SingleDatePicker SingleDatePicker_1"
  >
    <div>
      <div
        className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
      >
        <button
          className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-AxhCb eBehuO"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </button>
        <div
          className="DateInput DateInput_1"
        >
          <input
            aria-describedby="DateInput__screen-reader-message-date"
            aria-label=""
            autoComplete="off"
            className="DateInput_input DateInput_input_1"
            disabled={false}
            id="date"
            name="date"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            readOnly={false}
            required={false}
            type="text"
            value=""
          />
          <p
            className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
            id="DateInput__screen-reader-message-date"
          >
            Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Datepicker Standard 1`] = `
<div
  className="sc-fzplWN OzktN"
  width="100%"
>
  <div
    className="SingleDatePicker SingleDatePicker_1"
  >
    <div>
      <div
        className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
      >
        <button
          className="SingleDatePickerInput_calendarIcon SingleDatePickerInput_calendarIcon_1"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <div
            className="sc-AxhCb eBehuO"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </button>
        <div
          className="DateInput DateInput_1"
        >
          <input
            aria-describedby="DateInput__screen-reader-message-date"
            aria-label=""
            autoComplete="off"
            className="DateInput_input DateInput_input_1"
            disabled={false}
            id="date"
            name="date"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            readOnly={false}
            required={false}
            type="text"
            value="2019年12月25日"
          />
          <p
            className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
            id="DateInput__screen-reader-message-date"
          >
            Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Input 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-fznWqX jYLkbR"
    width="250px"
  >
    <div
      className="sc-fzoiQi faTAJQ"
    >
      <div>
        <div
          className="sc-fznZeY iBiAUT"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-fzokOt cvbxUL"
            data-test="text"
          >
            選択してください
          </div>
        </div>
        <div
          className="sc-fznyAO hkawof"
          onClick={[Function]}
        >
          <div
            className="sc-AxhCb eBehuO sc-fznKkj begaOd"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </div>
        <ul
          className="sc-fzoLag wSgMS sc-fzqARJ cWxzpn"
          data-test="itemList"
        >
          <div
            className="sc-fzoXzr iYbrAy"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Multi 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-fznWqX jYLkbR"
    width="250px"
  >
    <div
      className="sc-fzoiQi faTAJQ"
    >
      <div>
        <div
          className="sc-fznZeY iBiAUT"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-fzokOt cvbxUL"
            data-test="text"
          >
            選択してください
          </div>
        </div>
        <div
          className="sc-fznyAO hkawof"
          onClick={[Function]}
        >
          <div
            className="sc-AxhCb eBehuO sc-fznKkj begaOd"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
        </div>
        <ul
          className="sc-fzoLag wSgMS sc-fzqARJ cWxzpn"
          data-test="itemList"
        >
          <div
            className="sc-fzoXzr iYbrAy"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Borderless 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-fzpkJw eXHpSp"
    width="250px"
  >
    <div>
      <div
        className="sc-fzoant elNpzX"
        data-test="body"
        onClick={[Function]}
      >
        <div
          className="sc-fzomME jPCpAX"
          data-test="text"
        >
          20
        </div>
        <div
          className="sc-AxhCb eBehuO sc-fznMnq bkQFQJ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
      </div>
      <ul
        className="sc-fzoyTs jRJGXL sc-fznzOf cSjaXa"
        data-test="itemList"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Default 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-fzpmMD eYJJMw"
    width="200px"
  >
    <div
      className="sc-fznxKY frHUqC"
    >
      <div>
        <div
          className="sc-fzolEj eYWLOF"
          data-test="body"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-fzqPZZ kMjWQM"
            data-test="text"
          >
            
          </div>
          <div
            className="sc-fznMAR DQQGK"
            onClick={[Function]}
          >
            <div
              className="sc-AxhCb eBehuO sc-fznWOq cidPqW"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
          </div>
        </div>
        <ul
          className="sc-fzoyTs jRJGXL sc-fzqBkg jOcokz"
          data-test="itemList"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Input 1`] = `
<div
  className="ml-20 mt-10"
>
  <div
    className="sc-fzpmMD eYJJMw"
    width="200px"
  >
    <div
      className="sc-fznxKY frHUqC"
    >
      <div>
        <div
          className="sc-fzolEj eYWLOF"
          data-test="body"
          onClick={[Function]}
        >
          <div
            className="sc-fzqPZZ kMjWQM"
            data-test="text"
          >
            
          </div>
          <div
            className="sc-fznMAR DQQGK"
            onClick={[Function]}
          >
            <div
              className="sc-AxhCb eBehuO sc-fznWOq cidPqW"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
          </div>
        </div>
        <ul
          className="sc-fzoyTs jRJGXL sc-fzqBkg jOcokz"
          data-test="itemList"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle ItemList 1`] = `
<div
  className="ml-20 mt-10"
>
  <ul
    className="sc-fzoyTs jRJGXL"
    data-test="itemList"
  />
</div>
`;

exports[`Storyshots Components|Input Number 1`] = `
<div
  className="sc-fznLPX hNFdSl"
>
  <input
    className="sc-fzoaKM gPSa-dm"
    format="number"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Enter your age"
    value="0"
  />
  
</div>
`;

exports[`Storyshots Components|Input NumberWithDecimalPlace 1`] = `
<div
  className="sc-fznLPX hNFdSl"
>
  <input
    className="sc-fzoaKM gPSa-dm"
    format="number"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Enter your age"
    value="0"
  />
  
</div>
`;

exports[`Storyshots Components|Input Text 1`] = `
<div
  className="sc-fznLPX hNFdSl"
>
  <input
    className="sc-fzoaKM gPSa-dm"
    format="text"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    placeholder="Enter your name"
    value=""
  />
</div>
`;

exports[`Storyshots Components|MeatballKebabMenu all 1`] = `
<div
  className="mr-10 mt-56"
>
  <div
    className="sc-fzqAui bSUXjZ"
  >
    <div>
      <div
        className="sc-fzqMdD gWuOGf top"
        data-test="menu-component"
        onClick={[Function]}
      >
        <div
          className="sc-AxhCb eBehuO sc-fzowVh gSfeHE"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-fzoJus cXGpQF"
        >
          <ul
            className="sc-fzoVTD cEigny top hidden"
            data-test="list-component"
          >
            <li
              className="sc-fzpisO RuwgB"
              data-item="リスト1"
              data-test="list-item0"
              onClick={[Function]}
            >
              リスト1
            </li>
            <li
              className="sc-fzpisO RuwgB"
              data-item="リスト2"
              data-test="list-item1"
              onClick={[Function]}
            >
              リスト2
            </li>
            <li
              className="sc-fzpisO fXYbTv"
              color="destructive"
              data-item="リスト3"
              data-test="list-item2"
              onClick={[Function]}
            >
              リスト3
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`Storyshots Components|Modal all 1`] = `
<div
  className="m-10"
>
  <modal>
    <div
      className="sc-fznyYp ipAJtZ"
    >
      <div
        className="sc-fznLxA jfPTMb"
      >
        <div
          className="sc-fznXWL bLmbfY"
        >
          <div
            className="sc-fzokvW kcjXdo"
          >
            ロール作成
          </div>
          <div
            className="sc-fzqzlV bUxSBz"
            data-test="closeIcon"
            onClick={[Function]}
          >
            <div
              className="sc-AxhCb bZyDsW"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24"
            />
          </div>
        </div>
        <div
          className="sc-fzqLLg lhjIXO"
        >
          コンテンツ
        </div>
        <div
          className="sc-fzoxnE kfbURP"
        >
          <button
            className="sc-AxiKw brELHc sc-fzoMdx gViCdJ"
            data-test="button0"
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            登録
          </button>
        </div>
      </div>
    </div>
  </modal>
</div>
`;

exports[`Storyshots Components|RadioButton all 1`] = `
<div
  className="sc-fzoWqW dRgihX"
  data-test="radio-on"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="sc-AxhCb dxsMWA sc-fzplgP jkpXIP"
    color="rgb(51, 51, 51)"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-fznzqM gYgSZn"
    disabled={false}
  >
    RadioButton
  </span>
</div>
`;

exports[`Storyshots Components|SegmentedControl molecule 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fznYue hsvDDa"
    data-test="item0"
    onClick={[Function]}
    selected={true}
  >
    最初のタブ
  </div>
  <div
    className="sc-fznYue iljinW"
    data-test="item1"
    onClick={[Function]}
    selected={false}
  >
    真ん中のタブ
  </div>
  <div
    className="sc-fznYue iljinW"
    data-test="item2"
    onClick={[Function]}
    selected={false}
  >
    最後のタブ
  </div>
</div>
`;

exports[`Storyshots Components|Switch all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fzonjX bzqwap"
    data-test="switch-off"
  >
    <span
      className="sc-fzoCCn cTegbK"
    >
      OFF
    </span>
    <div
      className="sc-fzqzEs ekqGkZ"
      data-test="switch"
      onClick={[Function]}
    >
      <span
        className="sc-fzqOul cihRYN"
      />
    </div>
    <span
      className="sc-fzoCCn cTegbK"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Text Standard 1`] = `
<p
  className="sc-fzoPby iWutLR"
>
  Hello
</p>
`;

exports[`Storyshots Components|Textarea all 1`] = `
<div
  className="sc-fzpdbB fSqlbg"
>
  <textarea
    className="sc-fzppAM cuzvTZ"
    errored={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="文字を入力してください。"
    style={
      Object {
        "height": 0,
      }
    }
    value=""
  />
</div>
`;

exports[`Storyshots Components|Toast buttonless(info) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fznBtT hBCsTA"
    data-test="info-buttonless-toast"
  >
    <div
      className="sc-AxhCb kxENht sc-fznNTe kcxoJJ"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-fzobTh brfsGz"
      >
        ラベル
      </div>
      <div
        className="sc-fzobTh sc-fzooss jJhKpM"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Toast buttonless(progress) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fznBtT fuuRfY"
    data-test="progress-buttonless-toast"
  >
    <div
      className="sc-AxhCb kxENht sc-fznNTe kcxoJJ"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-fzobTh hAIaLj"
      >
        ラベル
      </div>
      <div
        className="sc-fzobTh sc-fzooss fkQRAo"
      >
        状態が入ります状態が入ります
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Toast buttonless(warning) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fznBtT lfRaez"
    data-test="warning-buttonless-toast"
  >
    <div
      className="sc-AxhCb kxENht sc-fznNTe kcxoJJ"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-fzobTh brfsGz"
      >
        ラベル
      </div>
      <div
        className="sc-fzobTh sc-fzooss jJhKpM"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Toast default(info) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fzqyvX hUSFlO"
    data-test="info-default-toast"
  >
    <div
      className="sc-AxhCb kxENht sc-fzqKVi ddogoZ"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-fzoOEf hloDsZ"
      >
        ラベル
      </div>
      <div
        className="sc-fzoOEf sc-fzpdyU hWFquA"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
    <span
      className="sc-fzoCUK glNDqf"
      onClick={[Function]}
    >
      <div
        className="sc-AxhCb kxENht sc-fzqKVi ddogoZ"
        color="white"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Toast default(warning) 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-fzqyvX fsZonF"
    data-test="warning-default-toast"
  >
    <div
      className="sc-AxhCb kxENht sc-fzqKVi ddogoZ"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-fzoOEf hloDsZ"
      >
        ラベル
      </div>
      <div
        className="sc-fzoOEf sc-fzpdyU hWFquA"
      >
        メールアドレスまたはパスワードに誤りがあります。もう一度入力してください。
      </div>
    </div>
    <span
      className="sc-fzoCUK glNDqf"
      onClick={[Function]}
    >
      <div
        className="sc-AxhCb kxENht sc-fzqKVi ddogoZ"
        color="white"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|ToolTip all 1`] = `
<div
  className="sc-fzppip bODhgj"
  data-test="tool-tip"
  direction="top"
>
  <span
    className="sc-fznBMq eQVHlP"
  >
    テキスト要素
  </span>
</div>
`;

exports[`Storyshots basics|Icons index 1`] = `
<div
  className="flex flex-wrap w-64"
>
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-AxjAm cCPmjj"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
</div>
`;

exports[`Storyshots components|FileUploader all 1`] = `
<div
  className="m-16"
>
  <div>
    <div
      className="sc-fzqAbL gGxUqu"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      width="400px"
    >
      <div
        className="sc-fzqMAW jtKaSj"
      >
        <input
          autoComplete="off"
          className="sc-fzpkqZ loOdwT"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-fzoydu NgWoI"
        >
          <div
            className="sc-AxhCb eBehuO sc-fzoJMP gsOfyA"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-fzoYHE eCfOfT"
          >
            ファイルを選択またはドラッグ&ドロップ
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mt-8"
  >
    <div
      className="sc-fzqAbL fVrmWC"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="sc-fzqMAW jtKaSj"
      >
        <input
          autoComplete="off"
          className="sc-fzpkqZ loOdwT"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-fzoydu NgWoI"
        >
          <div
            className="sc-AxhCb eBehuO sc-fzoJMP gsOfyA"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-fzoYHE eCfOfT"
          >
            hoge.png
          </span>
          <div
            className="sc-fznAgC eoYzWY"
            onClick={[Function]}
          >
            <div
              className="sc-AxhCb bLkCMk"
              color="rgb(224, 85, 72)"
              dangerouslySetInnerHTML={
                Object {
                  "__html": undefined,
                }
              }
              size="24px"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Icon Standard 1`] = `
<div
  className="sc-AxhCb cTHWuO"
  color="#333"
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
  size="24px"
/>
`;
